<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <!-- New Password Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/colorTextLight">
            <EditText android:id="@+id/new_password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@string/input_length"
                android:inputType="textPassword"
                android:hint="@string/reset_password_new_password_label"
                android:textColor="@color/colorTextLight"
                android:backgroundTint="@color/colorTextLight"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Repeat New Password Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_new_password_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/colorTextLight">
            <EditText android:id="@+id/repeat_password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@string/input_length"
                android:inputType="textPassword"
                android:hint="@string/reset_password_repeat_password_label"
                android:textColor="@color/colorTextLight"
                android:backgroundTint="@color/colorTextLight"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Security Question Text -->
        <TextView
        android:id="@+id/security_question"
        android:text="@string/placeholder_text"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorTextLight"/>

        <!-- Answer Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/colorTextLight">
            <EditText android:id="@+id/security_question_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="@string/input_length"
                android:inputType="textPassword"
                android:hint="@string/reset_password_answer_label"
                android:textColor="@color/colorTextLight"
                android:backgroundTint="@color/colorTextLight"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/reset_password_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="0dp"
            android:padding="12dp"
            android:text="@string/reset_password_reset_password_label"
            android:textColor="@color/colorTextLight"
            android:background="@color/colorPrimaryDark"/>

    </LinearLayout>
</ScrollView>
