<resources>

    <string name="app_name">Sanity</string>
    <string name="input_length">20</string>
    <string name="input_length_longer">200</string>
    <string name="input_length_shorter">3</string>
    <string name="placeholder">Placeholder</string>


    <!-- login screen -->
    <string name="login_username_label">Username</string>
    <string name="login_password_label">Password</string>
    <string name="login_login_button_label">Login</string>
    <string name="login_sign_up_button_label">No account? Create one</string>
    <string name="login_forgot_password_button_label">Forgot Password</string>

    <string name="login_username_already_exists">Username does not exist</string>
    <string name="login_username_or_password_wrong">Username or password incorrect</string>

    <!-- signup screen -->
    <string name="sign_up_no_email">Email cannot be empty</string>
    <string name="sign_up_username_label">Username</string>
    <string name="sign_up_email_label">Email</string>
    <string name="sign_up_password_label">Password</string>
    <string name="sign_up_reenter_password">Repeat Password</string>
    <string name="sign_up_pick_question_label">Pick A Security Question:</string>
    <string name="sign_up_enter_answer_label">Enter\nAnswer</string>
    <string name="sign_up_create_label">Create Account</string>
    <string name="login_error">Username or password was invalid</string>
    <string name="mismatched_passwords">Passwords do not match</string>
    <string name="password_too_short">Password must be at least 5 characters long</string>
    <string name="username_unavailable">Username already taken</string>
    <string name="username_empty">Username cannot be empty</string>
    <string name="password_empty">Password cannot be empty</string>
    <string name="no_answer_label">You must enter a security answer</string>
    <string name="email_already_taken">Email address already in use</string>
    <string name="email_not_valid">Must be a valid Email address</string>

    <!--reset_password_screen.xml -->
    <string name="reset_password_new_password_label">New Password</string>
    <string name="reset_password_repeat_password_label">Repeat New Password</string>
    <string name="reset_password_reset_password_label">Reset Password</string>
    <string name="reset_password_answer_label">Answer</string>
    <string name="placeholder_text"></string>
    <string name="wrong_answer">Wrong Answer To Security Question</string>

    <!-- Main menu -->
    <string name="main_menu_welcome_user">Hello %1$s!</string>
    <string name="main_menu_create_new">Create New</string>
    <string name="main_menu_confirm_delete">Are you sure you want to delete %1$d %2$s?</string>

    <!-- Budget menu -->
    <string name="overall_budget_name">Overall Budget</string>
    <string name="budget_menu_analytics_label">Analytics</string>
    <string name="main_menu_logout_label">Logout</string>
    <string name="main_menu_delete_label">Delete</string>
    <string name="main_menu_cancel_label">Cancel</string>
    <string name="cannot_find_username">User does not exist with given username</string>
    <string name="empty_item_or_amount">Item name and transaction amount fields cannot be empty</string>
    <string name="budget_exists">A category with that name already exists</string>
    <string name="non_pos_frequency">Notification frequency must be above 0</string>
    <string name="date_mismatch_2">End date must come after today</string>
    <string name="label_day">Day(s)</string>
    <string name="label_week">Week(s)</string>
    <string name="warning_over_budget">\u0020went over limit</string>
    <string name="add_category_label">Add A New Category</string>

    <!-- popup_window.xml -->
    <string name="popup_window_confirm">Confirm</string>
    <string name="popup_window_cancel">Cancel</string>

    <!-- activity_transaction_screen.xml-->
    <string name="budget_screen_title_label">Transaction List</string>

    <!-- activity_settings_screen.xml -->
    <string name="empty_name_or_thresholds">Category name, threshold fields cannot be empty and budget end date cannot be before today</string>
    <string name="checkbox_not_clicked">Please choose a transaction type</string>
    <string name="limit_too_low">Category limit must be greater than 0</string>
    <string name="date_mismatch_or_bad_limit">End date must come after start date and limit must be greater than 0</string>
    <string name="date_mismatch">End date must come after start date</string>
    <string name="budget_name_empty">Category name cannot be empty</string>
    <string name="empty_limit">Category limit cannot be empty</string>
    <string name="empty_frequency">Frequency cannot be empty</string>

    <!--transaction_input.xml -->
    <string name="transaction_date_label">Transaction Date</string>
    <string name="item_name_label">Item name</string>
    <string name="transaction_amount_label">Transaction Amount</string>
    <string name="transaction_type_label">Transaction Type</string>
    <string name="transaction_transaction_label">Transaction</string>
    <string name="transaction_refund_label">Refund</string>
    <string name="memo_label">Memo (Optional)</string>
    <string name="empty_item_name">Item name cannot be empty</string>
    <string name="empty_amount">Transaction amount cannot be empty</string>
    <string name="recurring">Recurring transaction</string>
    <string name="select_period_label">Select Period</string>

    <!-- add_category_inputut.xml.xml -->
    <string name="add_budget_budget_name_label">Category Name</string>
    <string name="add_budget_end_date_label">End Date</string>
    <string name="add_budget_threshold_label">Notify Over Category Threshold</string>
    <string name="add_budget_frequency_label">Notify Every</string>
    <string name="add_budget_limit_label">Budget Limit</string>

    <!--activity_settings_screen.xml -->
    <string name="settings_screen_budget_name_label">Category Name</string>
    <string name="settings_screen_start_date_label">Start Date</string>
    <string name="settings_screen_end_date_label">End Date</string>
    <string name="settings_screen_threshold_label">Notify Over Category Threshold</string>
    <string name="settings_screen_notification_label">Notify Every</string>
    <string name="settings_screen_limit_label">Category Limit</string>
    <string name="settings_screen_confirm_button_label">Confirm</string>

    <!--splash_screen.xml -->
    <string name="welcome">Welcome to $a₦i₮¥</string>

    <!-- add_budget_name -->
    <string name="budget_empty">Budget name cannot be empty</string>
    <string name="budget_not_unique">Budget name already taken</string>

    <!-- add_reminder_title -->
    <string name="reminder_title_empty">Reminder title cannot be empty</string>
    <string name="reminder_title_same">Reminder title already used</string>
    <string name="budget_or_category_empty">Cannot add reminder without a budget and a category</string>

    <!-- activity_reminder_menu.xml -->
    <string name="reminder_menu_label">Reminders</string>
    <string name="create_reminder_label">Create Reminder</string>
    <string name="reminder_repeat_label">Repeats</string>
    <string name="reminder_no_repeat_label">Does Not Repeat</string>

</resources>
